2009-01-10  vadim  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::loadDataFromCrawler): bug
	#2023261 "IPv6 - SNMP discovery of interfaces not working for
	IPv6". SNMP discovery can now read IPv6 addresses of interfaces
	using IP-MIB RFC4293. Not all snmp agents support this MIB, for
	example only recent versions of net-snmp support it.

	* starting with v3.0.4 build 739 snmp discovery is supported on
	Windows.

2009-01-06  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_iosacl_writers.cpp (PrintRule::PrintRule): fixes
	to make code compile on Windows.

2009-01-05  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_cisco.cpp (RoutingCompiler_cisco::compile):
	fixed bug (no #): routing compiler for pix refused to add more
	than one routing rule with an error saying that other rules were
	duplicates. Error was introduced in build 732.

2009-01-02  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_iosacl.cpp (RoutingCompiler_iosacl::compile):
	Added support for generation of "ip route" commands for Cisco IOS.
	Variant of Cisco IOS "ip route" command where gateway is the name
	of one of the interfaces of the router is also supported. To get
	this, put interface object in the "gateway" column of the routing
	rule.

	* pix.xml.in, RuleSetView.cpp: Routing ruleset view shows column
	"interface" only for platforms that require it. Currently IOS does
	not require it, while other platforms for which routing commands
	generation is supported require it (iptables and PIX).

2009-01-01  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_cisco.cpp: refactored PIX routing compiler by
	steven@openbsd.org to use it as a foundation of the routing
	compiler for both PIX and Cisco IOS (r731).

	* RoutingCompiler_pix.cpp: applied patch by Steven Mestdagh
	<steven@openbsd.org> that adds support for static routing
	configuration for PIX. Patch tested and applied in r726.

2008-12-31  vadim  <vadim@vk.crocodile.org>
