@@ -10,6 +10,63 @@
         <default>
         </default>
       </options>
+
+      <capabilities>
+        <negation_in_policy>False</negation_in_policy>
+        <negation_in_nat>False</negation_in_nat>
+        <logging_in_policy>False</logging_in_policy>
+        <options_in_policy>False</options_in_policy>
+        <supports_nat>False</supports_nat>
+        <supports_time>False</supports_time>
+        <supports_accounting>False</supports_accounting>
+        <supports_routing_itf>False</supports_routing_itf>
+        <security_levels>False</security_levels>
+        <network_zones>False</network_zones>
+        <unprotected_interfaces>False</unprotected_interfaces>
+        <actions>
+            <Accept>
+                <supported>True</supported>
+                <parameter>None</parameter>
+            </Accept>
+            <Deny>
+                <supported>True</supported>
+                <parameter>None</parameter>
+            </Deny>
+            <Reject>
+                <supported>True</supported>
+                <parameter>Reject</parameter>
+            </Reject>
+            <Accounting>
+                <supported>True</supported>
+                <parameter>None</parameter>
+            </Accounting>
+            <Tag>
+                <supported>False</supported>
+                <parameter>None</parameter>
+            </Tag>
+            <Pipe>
+                <supported>False</supported>
+                <parameter>None</parameter>
+            </Pipe>
+            <Classify>
+                <supported>False</supported>
+                <parameter>None</parameter>
+            </Classify>
+            <Custom>
+                <supported>False</supported>
+                <parameter>None</parameter>
+            </Custom>
+            <Branch>
+                <supported>False</supported>
+                <parameter>None</parameter>
+            </Branch>
+            <Route>
+                <supported>False</supported>
+                <parameter>None</parameter>
+            </Route>
+        </actions>
+      </capabilities>
+
     </Target>
 
 </FWBuilderResources>
